# hestia

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
.trunk/: trunk.yaml
src/: buckets.rs  events.rs  groups.rs  hooks.rs  main.rs
src/commands/: help.rs  mod.rs
src/commands/dev/: shutdown.rs
src/commands/fun/: 8ball.rs  cat.rs  coinflip.rs  dadjoke.rs  dog.rs  roll.rs  waifu.rs
src/commands/misc/: ping.rs
src/commands/staff/: ban.rs  kick.rs  unban.rs
src/commands/user/: avatar.rs  profile.rs
src/events/: ready.rs
src/utils/: config.rs
