[package]
name = "hestia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bson = "2.2"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.2"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "0.11" }
serde = "1.0"
serenity = { version = "0.11", default-features = false, features = [
  "builder",
  "client",
  "collector",
  "framework",
  "gateway",
  "http",
  "model",
  "standard_framework",
  "utils",
  "rustls_backend",
  "cache",
  "absolute_ratelimits",
] }
timeago = { version = "0.3", features = ["chrono"] }
tokio = { version = "1.17", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
